hanyi-daily/src/main/resources/static/kubernetes/traefik/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik.hanyi.com
      http:
        paths:
          - backend:
              serviceName: traefik
              servicePort: admin
